Fixed overflow setting for simple nav popups.

--- a/com.zutubi.pulse.master/src/www/css/core.css
+++ b/com.zutubi.pulse.master/src/www/css/core.css
@@ -78,6 +78,7 @@
 
 .k-selector-popup {
     border-top: none;
+    overflow: auto;
 }
 
 .k-selector-popup-item {
